# world-chase-tag-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  wct_db_backup1.pgsql
tests/: test_wct_api.py
wct_api/: __init__.py  database.py  functions.py  models.py  seeds.py  utils.py
wctapi/: __init__.py  crud_ops.py  database.py  models.py  schema.py  seeds.py  utils.py
